--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -28,11 +28,58 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
-    <div class="container">
+    <div class="container col-12">
       <!-- Timeblocks go here -->
+      <div class="row time-block">
+        <div class="col-1 hour" >9AM</div>
+        <textarea class="col-10 description" input="text"></textarea>
+        <button class="col-1 savebtn"><i class="fas fa-save"></i></button>
+      </div>
+      <div class="row time-block">
+        <div class="col-1 hour" >10AM</div>
+        <textarea class="col-10 description" input="text"></textarea>
+        <button class="col-1 savebtn"><i class="fas fa-save"></i></button>
+      </div> 
+      <div class="row time-block">
+        <div class="col-1 hour" >11AM</div>
+        <textarea class="col-10 description" input="text"></textarea>
+        <button class="col-1 savebtn"><i class="fas fa-save"></i></button>
+      </div>
+      <div class="row time-block">
+        <div class="col-1 hour" >12PM</div>
+        <textarea class="col-10 description" input="text"></textarea>
+        <button class="col-1 savebtn"><i class="fas fa-save"></i></button>
+      </div>
+      <div class="row time-block">
+        <div class="col-1 hour" >1PM</div>
+        <textarea class="col-10 description" input="text"></textarea>
+        <button class="col-1 savebtn"><i class="fas fa-save"></i></button>
+      </div> 
+      <div class="row time-block">
+        <div class="col-1 hour" >2PM</div>
+        <textarea class="col-10 description" input="text"></textarea>
+        <button class="col-1 savebtn"><i class="fas fa-save"></i></button>
+      </div> 
+      <div class="row time-block">
+        <div class="col-1 hour" >3PM</div>
+        <textarea class="col-10 description" input="text"></textarea>
+        <button class="col-1 savebtn"><i class="fas fa-save"></i></button>
+      </div>
+      <div class="row time-block">
+        <div class="col-1 hour" >4PM</div>
+        <textarea class="col-10 description" input="text"></textarea>
+        <button class="col-1 savebtn"><i class="fas fa-save"></i></button>
+      </div>
+      <div class="row time-block">
+        <div class="col-1 hour" >5PM</div>
+        <textarea class="col-10 description" input="text"></textarea>
+        <button class="col-1 savebtn"><i class="fas fa-save"></i></button>
+      </div>
+    
     </div>
-
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="assets/js/script.js"></script>
   </body>
 </html>
