--- a/index.html
+++ b/index.html
@@ -30,52 +30,51 @@
     </header>
     <div class="container col-12">
       <!-- Timeblocks go here -->
-      <div class="row time-block">
+      <div class="row time-block" id="hour9">
         <div class="col-1 hour" >9AM</div>
         <textarea class="col-10 description" input="text"></textarea>
-        <button class="col-1 savebtn"><i class="fas fa-save"></i></button>
+        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
       </div>
-      <div class="row time-block">
+      <div class="row time-block" id="hour10">
         <div class="col-1 hour" >10AM</div>
         <textarea class="col-10 description" input="text"></textarea>
-        <button class="col-1 savebtn"><i class="fas fa-save"></i></button>
+        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
       </div> 
-      <div class="row time-block">
+      <div class="row time-block" id="hour11">
         <div class="col-1 hour" >11AM</div>
         <textarea class="col-10 description" input="text"></textarea>
-        <button class="col-1 savebtn"><i class="fas fa-save"></i></button>
+        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
       </div>
-      <div class="row time-block">
+      <div class="row time-block" id="hour12">
         <div class="col-1 hour" >12PM</div>
         <textarea class="col-10 description" input="text"></textarea>
-        <button class="col-1 savebtn"><i class="fas fa-save"></i></button>
+        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
       </div>
-      <div class="row time-block">
+      <div class="row time-block" id="hour13">
         <div class="col-1 hour" >1PM</div>
         <textarea class="col-10 description" input="text"></textarea>
-        <button class="col-1 savebtn"><i class="fas fa-save"></i></button>
+        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
       </div> 
-      <div class="row time-block">
+      <div class="row time-block" id="hour14">
         <div class="col-1 hour" >2PM</div>
         <textarea class="col-10 description" input="text"></textarea>
-        <button class="col-1 savebtn"><i class="fas fa-save"></i></button>
+        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
       </div> 
-      <div class="row time-block">
+      <div class="row time-block" id="hour15">
         <div class="col-1 hour" >3PM</div>
         <textarea class="col-10 description" input="text"></textarea>
-        <button class="col-1 savebtn"><i class="fas fa-save"></i></button>
+        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
       </div>
-      <div class="row time-block">
+      <div class="row time-block" id="hour16">
         <div class="col-1 hour" >4PM</div>
         <textarea class="col-10 description" input="text"></textarea>
-        <button class="col-1 savebtn"><i class="fas fa-save"></i></button>
+        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
       </div>
-      <div class="row time-block">
+      <div class="row time-block" id="hour17">
         <div class="col-1 hour" >5PM</div>
         <textarea class="col-10 description" input="text"></textarea>
-        <button class="col-1 savebtn"><i class="fas fa-save"></i></button>
-      </div>
-    
+        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+      </div>  
     </div>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
